###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################


module(
    name = "easydb",
    version = "0.1.0",
)

bazel_dep(name = "rules_java", version = "7.3.2")
bazel_dep(name = "rules_jvm_external", version = "5.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.9.2",
        "org.junit.jupiter:junit-jupiter-engine:5.9.2",
        "org.junit.platform:junit-platform-launcher:1.9.2",
                "org.junit.platform:junit-platform-console:1.9.2",

        "com.google.guava:guava:32.1.3-jre",
        "org.slf4j:slf4j-api:2.0.9",
        "org.antlr:antlr4-runtime:4.13.1",
        "org.antlr:antlr4:4.13.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")